<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:background="@color/grey"
android:layout_height="match_parent"
tools:context=".presrntation.mainScreen.AddTask.AddSingleTask">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/grey"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.Toolbar>

<EditText
    android:id="@+id/textTaskNoRegular"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    tools:ignore="MissingConstraints"
    />

<ImageView
    android:id="@+id/iconOfTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_task"
    app:layout_constraintTop_toBottomOf="@+id/textTaskNoRegular"
    tools:ignore="MissingConstraints" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/icon"
    app:layout_constraintStart_toEndOf="@id/iconOfTask"
    app:layout_constraintTop_toBottomOf="@+id/textTaskNoRegular"
    tools:ignore="MissingConstraints" />

<ImageView
    android:id="@+id/imageCalendar"
    app:layout_constraintTop_toBottomOf="@id/iconOfTask"
    android:layout_width="40dp"
    android:src="@drawable/noregular"
    android:layout_height="40dp"
    tools:ignore="MissingConstraints" />

<TextView
    android:text="@string/thisDay"
    app:layout_constraintStart_toEndOf="@+id/imageCalendar"
    app:layout_constraintTop_toBottomOf="@id/iconOfTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints" />

<TextView
    android:id="@+id/textRememberNotification"
    android:text="@string/remember_notification"
    app:layout_constraintTop_toBottomOf="@id/imageCalendar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints" />

<Switch
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/textRememberNotification"
    app:layout_constraintTop_toBottomOf="@id/imageCalendar"
    tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>