<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presrntation.startScreen.ThirdQuestion">

    <ImageView
        android:id="@+id/backgrIm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/sun_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/questionOfThirdQuFragm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/sec_qu_sec_fr"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_container_btn"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/first_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sec_container_btn"
        app:layout_constraintTop_toBottomOf="@id/questionOfThirdQuFragm"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/first_answer"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/first_answ"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sec_container_btn"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/sec_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/third_container_btn"
        app:layout_constraintTop_toBottomOf="@id/first_container_btn"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/sec_answer"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/sec_answ"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/third_container_btn"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/third_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_container_btn"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/third_answer"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/can_not_answer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>